--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@emotion/styled": "^11.8.1",
     "@fontsource/montserrat": "^4.5.5",
     "framer-motion": "^6.2.8",
+    "microcms-js-sdk": "^2.0.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
